crates/pg_syntax/tests/snapshots/postgres_regress/int8@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(q2, 'S 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 . 9 9 9') FROM INT8_TBL;"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..62
    FuncCall@7..62
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "q2"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..62
        Sconst@19..62 "'S 9 9 9 9 9 9 9 9 9  ..."
  Ascii41@62..63 ")"
  Whitespace@63..64 " "
  From@64..68 "FROM"
  Whitespace@68..69 " "
  RangeVar@69..77
    Ident@69..77 "INT8_TBL"
  Ascii59@77..78 ";"

