crates/pg_syntax/tests/snapshots/postgres_regress/int8@78.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '9223372036854775808'::int8;"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    TypeCast@7..34
      AConst@7..28
        Sconst@7..28 "'9223372036854775808'"
      Typecast@28..30 "::"
      TypeName@30..34
        Ident@30..34 "int8"
  Ascii59@34..35 ";"

